Fix spacing.

--- a/client/src/styles/_spacing.scss
+++ b/client/src/styles/_spacing.scss
@@ -6,7 +6,7 @@
     padding: 1.5rem 2.5rem;
   }
   @include desktop {
-    padding: 1.5rem 8rem;
+    padding: 1.5rem 4rem;
   }
 }
 
@@ -16,7 +16,7 @@
     padding: 2rem 2.5rem 2.25rem;
   }
   @include desktop {
-    padding: 2.25rem 8rem 2.5rem;
+    padding: 2.25rem 4rem 2.5rem;
   }
 }
 
